--- a/src/main/resources/templates/salarytransfersuccess.html
+++ b/src/main/resources/templates/salarytransfersuccess.html
@@ -20,6 +20,14 @@
 <div class="container my-5">
     <h1>BrainStation 23 Examination</h1>
     <div th:replace="/includes/headermenu :: headermenu"> </div>
+    <h3>Salary Payment to Employee</h3>
+
+    <div class="card">
+        <div class="card-body">
+         Salary payment to employee finished successfully. <!--<span th:utext="{$reqamnt}"></span><div class="content" th:utext="${title}" />-->
+            <p th:text="${message}"></p>
+        </div>
+    </div>
 </div>
 
 
