--- a/src/main/resources/templates/addsalarysuccess.html
+++ b/src/main/resources/templates/addsalarysuccess.html
@@ -20,6 +20,13 @@
 <div class="container my-5">
     <h1>BrainStation 23 Examination</h1>
     <div th:replace="/includes/headermenu :: headermenu"> </div>
+    <h3> Add Grade wise Salary</h3>
+
+    <div class="card">
+        <div class="card-body">
+         Salary added successfully. 
+        </div>
+    </div>
 </div>
 
 
