--- a/src/main/resources/templates/salarytransferfail.html
+++ b/src/main/resources/templates/salarytransferfail.html
@@ -20,6 +20,13 @@
 <div class="container my-5">
     <h1>BrainStation 23 Examination</h1>
     <div th:replace="/includes/headermenu :: headermenu"> </div>
+    <h3>Salary Payment to Employee</h3>
+
+    <div class="card">
+        <div class="card-body">
+           <p th:text="${message}"></p>
+        </div>
+    </div>
 </div>
 
 
